// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has a copyright 1`] = `
<div
  className="components-image-grid-card-m__card"
>
  <Image
    imageId="some-id"
    ratio={2}
    size="very-small"
    type="venue"
  />
  <div
    className="components-image-grid-card-m__details-container"
  >
    <p>
      <strong>
        ©
      </strong>
       
      The Copyright
    </p>
    <div
      className="components-image-grid-card-m__toolbar"
    >
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaHeart
          className="components-image-grid-card-m__icon"
        />
      </a>
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaTrashO
          className="components-image-grid-card-m__icon"
        />
      </a>
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaPencil
          className="components-image-grid-card-m__icon"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`should render correctly when is main 1`] = `
<div
  className="components-image-grid-card-m__card"
>
  <Image
    imageId="some-id"
    ratio={2}
    size="very-small"
    type="venue"
  />
  <div
    className="components-image-grid-card-m__details-container"
  >
    <p
      className="components-image-grid-card-m__no-copyright"
    >
      No Copyright String
    </p>
    <div
      className="components-image-grid-card-m__toolbar"
    >
      <FaHeart
        className="components-image-grid-card-m__icon-main components-image-grid-card-m__icon"
      />
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaTrashO
          className="components-image-grid-card-m__icon"
        />
      </a>
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaPencil
          className="components-image-grid-card-m__icon"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`should render correctly when is not main 1`] = `
<div
  className="components-image-grid-card-m__card"
>
  <Image
    imageId="some-id"
    ratio={2}
    size="very-small"
    type="venue"
  />
  <div
    className="components-image-grid-card-m__details-container"
  >
    <p
      className="components-image-grid-card-m__no-copyright"
    >
      No Copyright String
    </p>
    <div
      className="components-image-grid-card-m__toolbar"
    >
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaHeart
          className="components-image-grid-card-m__icon"
        />
      </a>
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaTrashO
          className="components-image-grid-card-m__icon"
        />
      </a>
      <a
        className="components-image-grid-card-m__link"
        onClick={[Function]}
      >
        <FaPencil
          className="components-image-grid-card-m__icon"
        />
      </a>
    </div>
  </div>
</div>
`;
